salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/ERP_Stock_Item__c.object-meta.xml
<CustomObject>
    <label>Stok KartÄ±</label>
    <nameField><label>Stok KartÄ± AdÄ±</label><type>Text</type></nameField>
    <pluralLabel>Stok KartlarÄ±</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>