salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Allow_Negative__c.field-meta.xml
<CustomField>
    <fullName>Allow_Negative__c</fullName>
    
    <label>Negatif StoÄŸa Ä°zin Ver</label>
    
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>