salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    
    <label>Barkod</label>
    
    <type>Text</type>
    <length>80</length>
</CustomField>