salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    
    <label>Aktif</label>
    
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>