salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Last_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_At__c</fullName>
    
    <label>Son ERP Senkronizasyonu</label>
    
    <type>DateTime</type>
    
</CustomField>