salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    
    <label>ÃœrÃ¼n Kodu</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>