salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Reserved_Stock__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Stock__c</fullName>
    
    <label>Rezerve Stok</label>
    
    <type>Number</type>
    <precision>18</precision><scale>4</scale>
</CustomField>