salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    
    <label>SatÄ±ÅŸ FiyatÄ±</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>