salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Track_Stock__c.field-meta.xml
<CustomField>
    <fullName>Track_Stock__c</fullName>
    
    <label>Stok Takibi</label>
    
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>