salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    
    <label>Depo</label>
    
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint><referenceTo>ERP_Warehouse__c</referenceTo><relationshipLabel>Stok KartlarÄ±</relationshipLabel><relationshipName>Stock_Items</relationshipName>
</CustomField>