salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Item__c/validationRules/Stock_Limits_Are_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Limits_Are_Valid</fullName><active>true</active>
    <errorConditionFormula>AND(Maximum_Stock__c &gt; 0, Minimum_Stock__c &gt; Maximum_Stock__c)</errorConditionFormula>
    <errorMessage>Minimum stok, maksimum stoktan bÃ¼yÃ¼k olamaz.</errorMessage>
</ValidationRule>